<resources>
    <string name="app_name">ClienteASN</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Registrar</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="apellido_usuario">Apellidos</string>
    <string name="password_repeated">Repetir password</string>
    <string name="usuario_correo">Correo electronico</string>
    <string name="numero_celular">Número de celular</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_cuenta">Mi Perfil</string>
    <string name="title_chat">Mensajes</string>
    <string name="tipBuscar">Buscar amigos</string>
    <string name="tipAgregarComentario">Agregar comentario...</string>
    <string name="me_gusta">Me gusta</string>
    <string name="comentarios">Ver comentarios</string>
    <string name="title_activity_comentario">ComentarioActivity</string>
    <string name="tipAgregarMensaje">MensajeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
